[package]
name = "yamc"
version = "0.1.0"
edition = "2021"
authors =["Adarsh Liju Abraham"]
license = "MIT OR Apache-2.0"
description = "A package to convert markdown to HTML"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
comrak = "0.15.0"

