[package]
name = "yamc"
version = "0.1.0"
edition = "2021"
authors = ["Adarsh Liju Abraham"]
license = "MIT OR Apache-2.0"
description = "Yet Another Markdown Converter - A fast and feature-rich markdown to HTML and PDF converter"
repository = "https://github.com/yourusername/yamc"
keywords = ["markdown", "html", "converter", "cli", "documentation", "pdf"]
categories = ["command-line-utilities", "text-processing"]
readme = "README.md"

[dependencies]
comrak = "0.15.0"
lopdf = "0.35"
html2text = "0.6"

[[bin]]
name = "yamc"
path = "src/main.rs"

